[tool.poetry]
name = "mimir"
version = "0.1.0"
description = ""
authors = ["Robson Lopes <robson.lopes@edu.unifor.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pactman = "^2.30.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
